feat: Add scan_durnation config to limit scan time
Use Duration/Instant to stop scanning after the configured number of
seconds (default 5). Replace fixed-attempt loops with time-based loops
in
main and PAM auth and simplify frame logging. Update defaults and
README/packaging/store configs.

--- a/packaging/config.toml
+++ b/packaging/config.toml
@@ -10,3 +10,5 @@ threshold = 0.6
 # Camera device path
 # Use "v4l2-ctl --list-devices" to find available cameras
 camera = "/dev/video0"
+
+scan_durnation = 5
